--- a/hw00.ipynb
+++ b/hw00.ipynb
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 15,
       "id": "455d44eb",
       "metadata": {
         "id": "455d44eb"
@@ -114,7 +114,7 @@
         "    Returns:\n",
         "        fib_n: An int that is the n-th Fibonacci number.\n",
         "    \"\"\"\n",
-        "    if n == 0 or n == 1:\n",
+        "    if n == 1 or n == 2:\n",
         "        return 1\n",
         "    else:\n",
         "        return fib(n-1) + fib(n-2)\n"
@@ -132,12 +132,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "d5d3406b",
       "metadata": {
-        "id": "d5d3406b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d5d3406b",
+        "outputId": "d7c85a50-c5b6-4e37-d05b-802b99d129fb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tests passed.\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "assert fib(5) == 5\n",
@@ -165,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "9bbb631d",
       "metadata": {
         "id": "9bbb631d"
@@ -175,21 +187,26 @@
         "\n",
         "def run_linear_regression_gradient_descent(X, Y, initial_weights,\n",
         "                                           step_size=1e-4, num_steps=10000):\n",
-        "  \"\"\"Use gradient descent to find weights for linear regression model.\n",
+        "    \"\"\"Use gradient descent to find weights for linear regression model.\n",
         "\n",
-        "  The model is Y = np.dot(X, weights).\n",
+        "    The model is Y = np.dot(X, weights).\n",
         "\n",
-        "  Args:\n",
-        "    X: A np.ndarray of shape (num_examples, input_dim).\n",
-        "    Y: A np.ndarray of shape (num_examples, output_dim).\n",
-        "    initial_weights: A np.ndarray of shape (input_dim, output_dim).\n",
-        "    step_size: A float step size for weight updates.\n",
-        "    num_steps: An int total number of gradient descent steps.\n",
+        "    Args:\n",
+        "        X: A np.ndarray of shape (num_examples, input_dim).\n",
+        "        Y: A np.ndarray of shape (num_examples, output_dim).\n",
+        "        initial_weights: A np.ndarray of shape (input_dim, output_dim).\n",
+        "        step_size: A float step size for weight updates.\n",
+        "        num_steps: An int total number of gradient descent steps.\n",
         "\n",
-        "  Returns:\n",
-        "    weights: A np.ndarray of shape (input_dim, output_dim).\n",
-        "  \"\"\"\n",
-        "  raise NotImplementedError(\"Implement me!\")"
+        "    Returns:\n",
+        "        weights: A np.ndarray of shape (input_dim, output_dim).\n",
+        "    \"\"\"\n",
+        "    weights = initial_weights\n",
+        "\n",
+        "    for n in range(num_steps):\n",
+        "        grad = ((X @ weights - Y).T @ X).T\n",
+        "        weights -= step_size * grad\n",
+        "    return weights"
       ]
     },
     {
@@ -204,12 +221,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "run_linear_regression_gradient_descent(\n",
+        "    np.array([[-1.41262304, -0.05674459],  [-0.39088744,  1.93347787],  [ 1.60273423,  0.49425723],  [-0.43195992,  2.15683528],  [ 0.41657819,  0.64056449],  [-0.15237357, -0.2646991 ],  [-0.18675108,  0.21625101],  [-1.00084224, -0.17877953],  [ 0.29247275,  0.90152606],  [-0.19424211, -1.95464221]], dtype=np.float64),\n",
+        "    np.array([[ 1.53765174,  1.99632635, -0.44349588],  [ 2.75705143,  3.46424097, -3.82134691],  [-1.23038088, -1.62281025, -0.31252083],  [ 3.07090808,  3.85841826, -4.26119977],  [ 0.29276422,  0.34321647, -1.05295189],  [-0.14344599, -0.17094933,  0.44282211],  [ 0.47092835,  0.59817693, -0.48320843],  [ 0.92366326,  1.20737983, -0.05126426],  [ 0.74597395,  0.91589509, -1.59655717],  [-2.11733393, -2.63383695,  3.63320385]], dtype=np.float64),\n",
+        "    np.array([[ 0.48758645,  0.08269006, -1.55049248],  [ 0.93392762,  0.54483908,  0.5738612 ]], dtype=np.float64))"
+      ],
+      "metadata": {
+        "id": "IW3Qs0uBGe2Z",
+        "outputId": "92f58f7b-8142-40ca-de3b-8998c2e5a893",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "IW3Qs0uBGe2Z",
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1.13341595, -1.47015507,  0.3862705 ],\n",
+              "       [ 1.19606495,  1.49376665, -1.89738659]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
       "id": "78366adb",
       "metadata": {
-        "id": "78366adb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "78366adb",
+        "outputId": "9d0b93c3-f9a2-4195-af3f-1d6c7f48c6e6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tests passed.\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "assert np.allclose(run_linear_regression_gradient_descent(np.array([[-1.41262304, -0.05674459],  [-0.39088744,  1.93347787],  [ 1.60273423,  0.49425723],  [-0.43195992,  2.15683528],  [ 0.41657819,  0.64056449],  [-0.15237357, -0.2646991 ],  [-0.18675108,  0.21625101],  [-1.00084224, -0.17877953],  [ 0.29247275,  0.90152606],  [-0.19424211, -1.95464221]], dtype=np.float64), np.array([[ 1.53765174,  1.99632635, -0.44349588],  [ 2.75705143,  3.46424097, -3.82134691],  [-1.23038088, -1.62281025, -0.31252083],  [ 3.07090808,  3.85841826, -4.26119977],  [ 0.29276422,  0.34321647, -1.05295189],  [-0.14344599, -0.17094933,  0.44282211],  [ 0.47092835,  0.59817693, -0.48320843],  [ 0.92366326,  1.20737983, -0.05126426],  [ 0.74597395,  0.91589509, -1.59655717],  [-2.11733393, -2.63383695,  3.63320385]], dtype=np.float64), np.array([[ 0.48758645,  0.08269006, -1.55049248],  [ 0.93392762,  0.54483908,  0.5738612 ]], dtype=np.float64)), np.array([[-1.13341595, -1.47015508,  0.3862705 ],  [ 1.19606495,  1.49376665, -1.8973866 ]], dtype=np.float64), atol=1e-6)\n",
