--- a/hw00.ipynb
+++ b/hw00.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "ff26bd30",
       "metadata": {
         "id": "ff26bd30"
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "455d44eb",
       "metadata": {
         "id": "455d44eb"
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "d5d3406b",
       "metadata": {
         "colab": {
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "9bbb631d",
       "metadata": {
         "id": "9bbb631d"
@@ -235,7 +235,7 @@
         }
       },
       "id": "IW3Qs0uBGe2Z",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "78366adb",
       "metadata": {
         "colab": {
@@ -291,33 +291,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "a62df6da",
       "metadata": {
         "id": "a62df6da"
       },
       "outputs": [],
       "source": [
+        "from typing import Any, Callable, Tuple, List, Set\n",
         "\n",
-        "def breadth_first_search(initial_state,\n",
-        "                         check_goal_fn,\n",
-        "                         successor_fn,\n",
-        "                         max_expansions=1000):\n",
-        "  \"\"\"Finds a plan from initial state to goal using BFS.\n",
+        "# Types\n",
+        "State = Any\n",
+        "Action = Any\n",
+        "Node = Tuple[State, List[Action]]\n",
         "\n",
-        "  Args:\n",
+        "def breadth_first_search(initial_state: State,\n",
+        "                         check_goal_fn: Callable[[State], bool],\n",
+        "                         successor_fn: Callable[[State], Tuple[Action, State]],\n",
+        "                         max_expansions: int = 1000):\n",
+        "    \"\"\"Finds a plan from initial state to goal using BFS.\n",
+        "\n",
+        "    Args:\n",
         "    initial_state: Any state representation.\n",
         "    check_goal_fn: A function that takes a state and returns a bool\n",
-        "      indicating whether the goal is reached.\n",
+        "        indicating whether the goal is reached.\n",
         "    successor_fn: A function that takes a state and yields zero or\n",
-        "      more (action, next state).\n",
+        "        more (action, next state).\n",
         "    max_expansions: An int bounding the number of times that thhe\n",
-        "      successor_fn is called before giving up.\n",
+        "        successor_fn is called before giving up.\n",
         "\n",
-        "  Returns:\n",
+        "    Returns:\n",
         "    plan: A list of actions or None.\n",
-        "  \"\"\"\n",
-        "  raise NotImplementedError(\"Implement me!\")"
+        "    \"\"\"\n",
+        "    visited_states: Set[State] = set()\n",
+        "    queue: List[Node] = [(initial_state, [])]\n",
+        "    num_expansions = 0\n",
+        "\n",
+        "    while True:\n",
+        "        cur_state, action_history = queue.pop()\n",
+        "        for action, n_state in successor_fn(cur_state):\n",
+        "\n",
+        "            # Add to queue if it's not visited\n",
+        "            if n_state not in visited_states:\n",
+        "                queue.append((n_state, action_history.append(action)))\n",
+        "                visited_states.add(n_state)\n",
+        "\n",
+        "    raise NotImplementedError(\"Implement me!\")"
       ]
     },
     {
