--- a/hw00.ipynb
+++ b/hw00.ipynb
@@ -291,7 +291,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "source": [
+        "x = []\n",
+        "y = x + [1]\n",
+        "x, y"
+      ],
+      "metadata": {
+        "id": "V-FSgVItwksl",
+        "outputId": "e232e13d-269e-4323-ea01-24fe6c3937c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "V-FSgVItwksl",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "([], [1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
       "id": "a62df6da",
       "metadata": {
         "id": "a62df6da"
@@ -324,19 +353,30 @@
         "    plan: A list of actions or None.\n",
         "    \"\"\"\n",
         "    visited_states: Set[State] = set()\n",
-        "    queue: List[Node] = [(initial_state, [])]\n",
+        "    init_node = (initial_state, [])\n",
+        "    queue: List[Node] = [init_node]\n",
         "    num_expansions = 0\n",
         "\n",
         "    while True:\n",
-        "        cur_state, action_history = queue.pop()\n",
-        "        for action, n_state in successor_fn(cur_state):\n",
+        "        try:\n",
+        "            cur_node = queue.pop()\n",
+        "        except IndexError:\n",
+        "            # queue is empty\n",
+        "            return None\n",
+        "\n",
+        "        cur_state, action_history = cur_node\n",
+        "        if check_goal_fn(cur_state):\n",
+        "            return action_history\n",
+        "\n",
+        "        for n_action, n_state in successor_fn(cur_state):\n",
+        "            num_expansions += 1\n",
+        "            new_action_history = action_history + [n_action]\n",
+        "            new_node = (n_state, new_action_history)\n",
         "\n",
         "            # Add to queue if it's not visited\n",
         "            if n_state not in visited_states:\n",
-        "                queue.append((n_state, action_history.append(action)))\n",
-        "                visited_states.add(n_state)\n",
-        "\n",
-        "    raise NotImplementedError(\"Implement me!\")"
+        "                queue.append(new_node)\n",
+        "                visited_states.add(n_state)\n"
       ]
     },
     {
@@ -351,17 +391,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "309614ab",
       "metadata": {
-        "id": "309614ab"
+        "id": "309614ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5b4beee0-56c1-4bc3-b7c5-4cd692db3462"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tests passed.\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "assert breadth_first_search((0, 0), grid_check_goal_fn, grid_successor_fn) == [\"down\", \"down\", \"down\", \"right\", \"right\", \"up\", \"right\", \"right\", \"down\", \"down\"]\n",
         "print('Tests passed.')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Le6btytxxAGN"
+      },
+      "id": "Le6btytxxAGN",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
